--- a/index.html
+++ b/index.html
@@ -17,37 +17,34 @@
       <img class="card__image" src="./images/icon-sedans.svg" alt="sedans">
       <h1 class="card__title">Sedans</h1>
       <p class="card__desc">
-        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-        or on your next road trip.
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
       </p>
-      <button class="card__btn">Learn More</button>
+      <button id="sedans__btn" class="card__btn">Learn More</button>
     </div>
     
     <div class="card">
       <img class="card__image" src="./images/icon-suvs.svg" alt="suvs">
       <h1 class="card__title">SUVs</h1>
       <p class="card__desc">
-        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-        and off-road adventures.
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
       </p>
-      <button  class="card__btn">Learn More</button>
+      <button id="suvs__btn" class="card__btn">Learn More</button>
     </div>
   
     <div class="card">
       <img class="card__image" src="./images/icon-luxury.svg" alt="luxury">
       <h1 class="card__title">Luxury</h1>
       <p class="card__desc">
-        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-        rental and arrive in style.
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
       </p>
-      <button class="card__btn">Learn More</button>
+      <button id="luxurys__btn" class="card__btn">Learn More</button>
     </div>
   
   </section>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Stephanie Opala</a>.
+  </footer>
 </body>
 </html>
